--- a/style/styles.css
+++ b/style/styles.css
@@ -31,7 +31,7 @@ header nav{
 }
 
 header .header-title{
-    color: yellow;
+    color: #FFD15B;
     text-align: center;
 }
 
@@ -70,7 +70,7 @@ header .search-container button img{
 
 /* RECEIES SECTION */
 .recipes-list{
-    background-color: lightgray;
+    background-color: #ededed;
     display: flex;
     flex-direction: row;
     justify-content: start;
@@ -403,6 +403,7 @@ header .search-container button img{
     align-items: center;
 }
 .header-title h1 {
+    font-weight: 600;
     text-align: center;
 }
 .search-container {
@@ -417,11 +418,11 @@ header .search-container button img{
     border-radius: 4px;
 }
 .filters-bar {
+    background-color: #EDEDED;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 10px;
-    border-bottom: 1px solid #ddd;
 }
 .filters {
     display: flex;
@@ -432,29 +433,32 @@ header .search-container button img{
     display: inline-block;
 }
 .dropbtn {
-    background-color: #f8f8f8;
-    border: 1px solid #ccc;
+    background-color: white;
+    border-radius: 5px;
     padding: 10px;
     cursor: pointer;
-    border-radius: 4px;
+    color: black;
+    font-weight: 500;
 }
 .dropdown-content {
+    margin-bottom: 10px;
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    min-width: 150px;
+    background-color: white;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
-.dropdown-content input {
+/* .dropdown-content input {
     margin-bottom: 10px;
     padding: 5px;
     width: 100%;
     border: 1px solid #ccc;
     border-radius: 4px;
-}
+} */
 .dropdown-content ul {
     list-style-type: none;
     padding: 0;
